<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lu.rrcs.Insert"
    android:background="#EAF2FA">

    <ImageView
        android:layout_width="30dp"
        android:background="@drawable/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:id="@+id/imageView"
        android:layout_height="30dp" />

    <TextView
        android:text="@string/insert_pet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_pet_name"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:textSize="24sp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/title"
        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/insert_pet_name"
        android:layout_toStartOf="@+id/insert_pet_name"
        android:layout_marginTop="28dp"
        android:id="@+id/imageView2" />

    <TextView
        android:text="@string/insert_pet_kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_pet_kind"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:textSize="24sp"/>

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spinner_insert_pet_kind"
        android:layout_alignBottom="@+id/insert_pet_kind"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="180dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/title"
        android:layout_marginTop="26dp"
        android:id="@+id/imageView3"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/temp_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:id="@+id/temp_range"
        android:textSize="24sp"/>

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_temp_low"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <TextView
        android:text="@string/range1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/range1"
        android:textSize="20sp"
        android:layout_alignTop="@+id/spinner_temp_low"
        android:layout_alignRight="@+id/temp_range"
        android:layout_alignEnd="@+id/temp_range" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:id="@+id/spinner_temp_high"
        android:layout_alignTop="@+id/range1"
        android:layout_toRightOf="@+id/range1"
        android:layout_toEndOf="@+id/range1" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/title"
        android:layout_below="@+id/spinner_temp_low"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView4" />

    <TextView
        android:text="@string/hum_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:id="@+id/hum_range"
        android:textSize="24sp"/>

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/spinner_hum_low"
        android:layout_below="@+id/hum_range"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4" />

    <TextView
        android:text="@string/range2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner_hum_low"
        android:layout_alignLeft="@+id/range1"
        android:layout_alignStart="@+id/range1"
        android:id="@+id/range2"
        android:textSize="20sp"/>

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_hum_high"
        android:layout_alignTop="@+id/range2"
        android:layout_alignLeft="@+id/spinner_temp_high"
        android:layout_alignStart="@+id/spinner_temp_high" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/enter"
        android:layout_marginBottom="13dp"
        android:id="@+id/insert_enter"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spinner_hum_high"
        android:layout_alignEnd="@+id/spinner_hum_high" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editText_insert_pet_name"
        android:ems="10"
        android:id="@+id/editText_insert_pet_name"
        android:layout_width="180dp"
        android:layout_alignBottom="@+id/insert_pet_name"
        android:layout_toRightOf="@+id/insert_pet_name"
        android:layout_toEndOf="@+id/insert_pet_name"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp" />
</RelativeLayout>
