<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lu.rrcs.Information"
    android:background="#EAF2FA">

    <TextView
        android:text="@string/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView5"
        android:id="@+id/temp"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/textView_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/temp"
        android:layout_toRightOf="@+id/temp"
        android:layout_toEndOf="@+id/temp"
        android:layout_marginLeft="71dp"
        android:layout_marginStart="71dp"
        android:id="@+id/textView_temp"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hum"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_toRightOf="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/textView_hum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hum"
        android:layout_toRightOf="@+id/hum"
        android:layout_toEndOf="@+id/hum"
        android:layout_marginLeft="71dp"
        android:layout_marginStart="71dp"
        android:id="@+id/textView_hum"
        android:textSize="20sp"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/find"
        android:layout_alignTop="@+id/scan"
        android:layout_alignLeft="@+id/textView_hum"
        android:layout_alignStart="@+id/textView_hum"
        android:id="@+id/discover" />

    <ListView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:id="@+id/devicesListView" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/temp"
        android:layout_marginTop="12dp"
        android:id="@+id/imageView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/title"
        android:layout_marginTop="24dp"
        android:id="@+id/imageView6"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/stick2"
        android:id="@+id/switch_stick"
        android:layout_below="@+id/switch_hot"
        android:layout_toLeftOf="@+id/discover"
        android:layout_toStartOf="@+id/discover" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/screen_on1"
        android:id="@+id/switch_screen"
        android:layout_below="@+id/switch_water"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/water1"
        android:id="@+id/switch_water"
        android:layout_above="@+id/switch_stick"
        android:layout_toRightOf="@+id/scan"
        android:layout_toEndOf="@+id/scan"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/hot1"
        android:id="@+id/switch_hot"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/hum"
        android:layout_toRightOf="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/setting"
        android:layout_marginTop="21dp"
        android:id="@+id/imageView7"
        android:layout_below="@+id/switch_stick"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/open"
        android:id="@+id/scan"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_above="@+id/devicesListView"
        android:layout_toRightOf="@+id/imageView7"
        android:layout_toEndOf="@+id/imageView7"
        android:layout_marginBottom="11dp" />

    <TextView
        android:text="@string/BT_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BT_setting"
        android:textSize="20sp"
        android:layout_alignTop="@+id/imageView7"
        android:layout_toRightOf="@+id/imageView7"
        android:layout_toEndOf="@+id/imageView7" />

</RelativeLayout>
